# salvo-ai

./: .gitignore  README.md  Roadmap.md  pyproject.toml
.claude/: gsd-file-manifest.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation-and-scenario-loading/: 01-01-SUMMARY.md  01-02-SUMMARY.md  01-03-SUMMARY.md
.planning/phases/02-adapter-layer-and-single-run-execution/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-assertion-engine-and-scoring/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md
src/salvo/: __init__.py
src/salvo/adapters/: __init__.py  base.py  (+3 more)
tests/: test_adapters_anthropic.py  test_adapters_base.py  test_adapters_openai.py  test_adapters_registry.py  test_aggregation.py  test_cli_run.py  test_cli_validate.py  test_evaluation_formatting.py  test_evaluation_jmespath.py  test_evaluation_limits.py  test_evaluation_normalizer.py  test_evaluation_scorer.py  test_evaluation_tool_sequence.py  test_execution_cost.py  test_execution_extras.py  test_execution_redaction.py  test_execution_runner.py  test_execution_trace.py  test_judge_aggregation.py  test_judge_context.py  test_judge_evaluator.py  test_judge_extraction.py  test_judge_integration.py  test_judge_prompt.py  test_loader_errors.py  test_loader_validator.py  test_loader_yaml_parser.py  test_models_config.py  test_models_result.py  test_models_scenario.py  test_output.py  test_recording.py  test_reeval_cmd.py  test_replay_cmd.py  test_report_cmd.py  test_retry.py  test_run_cmd_ntrial.py  test_scaffold_init.py  test_storage_json_store.py  test_trial_models.py  (+1 more)
(+68 files in other folders)
