[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "salvo-ai"
version = "0.1.1"
description = "Test framework for multi-step AI agents"
readme = "README.md"
license = {text = "MIT"}
keywords = ["ai", "agents", "testing", "evaluation", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.0",
    "pyyaml>=6.0",
    "typer>=0.24.0",
    "rich>=14.0",
    "uuid7>=0.1.0",
    "jmespath>=1.1.0",
]

[project.optional-dependencies]
openai = ["openai>=2.21.0"]
anthropic = ["anthropic>=0.80.0"]
all = ["openai>=2.21.0", "anthropic>=0.80.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-asyncio>=0.25.0",
]

[project.scripts]
salvo = "salvo.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/salvo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
